<resources>
    <string name="app_name">DriveIT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="log_in_username">Username</string>
    <string name="log_in_password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="wrong_email_format">Email formatting is wrong!</string>
    <string name="wrong_log_in_data">Email or password is incorrect!</string>
    <string name="empty_field_warning">Please fill all fields.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="log_in">Log in</string>
    <string name="automobili">Automobili</string>
    <string name="korisnici">Korisnici</string>
    <string name="servisi">Servisi</string>
    <string name="app_lang_pref">Language preference</string>
    <string name="log_out">Log out</string>
    <string name="label_firstName">First name</string>
    <string name="label_lastName">Last name</string>
    <string name="label_email">Email</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>
    <string name="removal_question_user">Do you wish to remove this user?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model_veichle">Model veichle</string>
    <string name="production_year">Production year</string>
    <string name="kw">Kw</string>
    <string name="chassis_number">Chassis number</string>
    <string name="registration_number">registration_number</string>
    <string name="registration_date">Registration date</string>
    <string name="registration_expired">Registration expired</string>
    <string name="average_fuel_consumption">Average fuel consumption</string>
    <string name="add_user">Add user</string>
    <string name="new_user">New user</string>
    <string name="label_password">Password</string>
    <string name="label_repeatPassword">Repeat password</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="employee">Employee</string>
    <string name="Administrator">Administrator</string>
    <string name="mechanic">Mechanic</string>
    <string name="manufaturer">Manufacturer</string>
    <string name="label_model">Model</string>
    <string name="label_registration_number">Registration number</string>
    <string name="label_status">Status</string>
    <string name="label_driver">Driver</string>
    <string name="malfunctionName">Malfunction name</string>
    <string name="malfunctionVehicle">Vehicle</string>
    <string name="hint_user">user</string>
    <string name="malfunctionUser">User</string>
    <string name="malfunctionDate">Date</string>
    <string name="malfunctionType">Driveable</string>
    <string name="malfunctionSolved">Solved</string>
    <string name="malfunctionDescription">Description</string>
    <string name="malfunctionSave">Save</string>
    <string name="malfunctionCancel">Cancel</string>
    <string name="user_added">User added</string>
    <string name="malfunction_added">Malfunction added</string>
    <string name="malfunction_updated">Malfunction updated</string>
    <string name="serviceDate">Date of service</string>
    <string name="serviceDateOfNextService">Date of next service</string>
    <string name="serviceBigService">Regular service</string>
    <string name="priceOfParts">Parts price</string>
    <string name="priceOfWork">Work price</string>
    <string name="save">Save</string>
    <string name="service_updated">Service updated!</string>
    <string name="vehicle">Vehicle</string>

    <string name="km_number">KM number</string>
    <string name="vehicle_updated">Vehicle updated!</string>
    <string name="vehicle_added">Vehicle added</string>

    <string name="choose_date">Pick a date</string>
    <string name="open">Open</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>
    <string name="user">User</string>
    <string name="service_added">Service added</string>
    <string name="malfunctions">Malfunctions</string>

    <string name="startMileage">Mileage at start</string>
    <string name="endMileage">Mileage at end</string>
    <string name="crossedMileage">Mileage crossed</string>

    <string name="removal_question_vehicle">Do you wish to remove this vehicle?</string>
    <string name="cancel_delete_vehicle">Cancel</string>
    <string name="delete_vehicle">Delete</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="required">Required</string>
    <string name="free">Free</string>
    <string name="new_vehicle">New vehicle</string>
    <string name="update_vehicle">Update vehicle</string>
    <string name="fuel_status">Fuel status</string>
    <string name="vehicles">Vehicles</string>
    <string name="malfunctionsS">Malfunctions</string>
    <string name="lbl_malfunction_name">Malfunction Name</string>
    <string name="update_malfunction">Update malfunction</string>
    <string name="fill_manufacturer_name">Fill the manufacturer name</string>
    <string name="add_malfunction">Add malfunction</string>
    <string name="users">Users</string>
    <string name="mechanician">Mechanician</string>
    <string name="date_of_service">Date of service</string>
    <string name="description_of_service">Description</string>
    <string name="services">Services</string>
    <string name="update_service_label">Update service</string>
    <string name="add_service_label">Add service</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="travel_order_updated">Travel order updated</string>
    <string name="load_data_from">Load data from</string>
    <string name="username">Username</string>
    <string name="settings">Settings</string>
    <string name="en">en</string>
    <string name="preference">Preference</string>


</resources>
