<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="?android:attr/actionModePasteDrawable"
            android:title="@string/automobili" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="?android:attr/actionModePasteDrawable"
            android:title="@string/korisnici" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/servisi" />



    </group>

    <item
        android:id="@+id/logout"
        android:title="Sign out"
        android:icon="@android:drawable/ic_lock_power_off" />

</menu>
