<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:id="@+id/add_user_label_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/label_firstName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/add_user_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            tools:text="First Name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:id="@+id/add_user_label_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/label_lastName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/add_user_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            tools:text="Last Name" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:id="@+id/add_user_label_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/label_email"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/add_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:inputType="textEmailAddress"
            tools:text="Email" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <CheckBox
            android:id="@+id/add_user_checkBoxRoleEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employee"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/add_user_checkBoxRoleAdministrator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Administrator"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/add_user_checkBoxRoleMechanic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mechanic"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/label_password"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/add_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:inputType="textPassword"
            tools:text="Password" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/label_repeatPassword"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/add_user_repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:inputType="textPassword"
            tools:text="Repeat password" />
    </LinearLayout>



    <Button
        android:id="@+id/add_user_button_addUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_user" />


</LinearLayout>