<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:touchscreenBlocksFocus="false">

            <AutoCompleteTextView
                android:id="@+id/add_service_mechanic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/mechanic"
                tools:text="mechanic" />
        </android.support.design.widget.TextInputLayout>




            <Spinner
                android:id="@+id/add_service_vehiclePicker"
                style="@android:style/Widget.Spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/vehicle" />



        <android.support.design.widget.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:touchscreenBlocksFocus="false">

            <AutoCompleteTextView
                android:id="@+id/add_service_dateOfService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/serviceDate"
                tools:text="01.01.2017." />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:touchscreenBlocksFocus="false">

            <EditText
                android:id="@+id/add_service_dateOfNextService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/serviceDateOfNextService"
                tools:text="01.01.2017." />
        </android.support.design.widget.TextInputLayout>


        <CheckBox
            android:id="@+id/add_service_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/serviceBigService" />

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:touchscreenBlocksFocus="false">

            <AutoCompleteTextView
                android:id="@+id/add_service_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="true"
                android:hint="@string/malfunctionDescription"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis enim luctus, mollis lectus et, malesuada lectus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus." />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:touchscreenBlocksFocus="false">

            <AutoCompleteTextView
                android:id="@+id/add_service_priceOfParts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="true"
                android:hint="@string/priceOfParts"
                android:inputType="numberDecimal"
                tools:text="300" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:touchscreenBlocksFocus="false">

            <AutoCompleteTextView
                android:id="@+id/add_service_priceOfWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="true"
                android:hint="@string/priceOfWork"
                android:inputType="numberDecimal"
                tools:text="1200" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/add_service_buttonCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/add_service_buttonSave"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>