<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingBottom="8pt"
                android:shadowColor="@color/colorPrimaryDark"
                android:shadowDx="8"
                android:shadowDy="8"
                android:shadowRadius="10"
                android:text="@string/add_malfunction"
                android:textAlignment="center"
                android:textColor="#406090"
                android:textSize="20dp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:touchscreenBlocksFocus="false">

                <AutoCompleteTextView
                    android:id="@+id/add_malfunction_name"
                    style="@android:style/Widget.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/hint_email"
                    android:fontFamily="sans-serif"
                    android:hint="@string/malfunctionName"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:shadowRadius="12" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:touchscreenBlocksFocus="false">

                <AutoCompleteTextView
                    android:id="@+id/add_malfunction_vehicle"
                    style="@android:style/Widget.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/hint_email"
                    android:fontFamily="sans-serif"
                    android:hint="@string/malfunctionVehicle"
                    android:inputType="text"
                    android:maxLines="1"
                    android:shadowRadius="12"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:touchscreenBlocksFocus="false">

                <AutoCompleteTextView
                    android:id="@+id/add_malfunction_user"
                    style="@android:style/Widget.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:fontFamily="sans-serif"
                    android:hint="@string/malfunctionUser"
                    android:inputType="text"
                    android:maxLines="1"
                    android:shadowRadius="12"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:touchscreenBlocksFocus="false">

                <AutoCompleteTextView
                    android:id="@+id/add_malfunction_date"
                    style="@android:style/Widget.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:fontFamily="sans-serif"
                    android:hint="@string/malfunctionDate"
                    android:inputType="text"
                    android:maxLines="1"
                    android:shadowRadius="12"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/add_malfunction_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/malfunctionType" />

                <CheckBox
                    android:id="@+id/add_malfunction_solved"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/malfunctionSolved" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:touchscreenBlocksFocus="false">

                <AutoCompleteTextView
                    android:id="@+id/add_malfunction_description"
                    style="@android:style/Widget.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:fontFamily="sans-serif"
                    android:hint="@string/malfunctionDescription"
                    android:inputType="text"
                    android:shadowRadius="12" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/add_malfunction_buttonSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/malfunctionSave" />

                <Button
                    android:id="@+id/add_malfunction_buttonCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/malfunctionCancel" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>