<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:touchscreenBlocksFocus="false">

            <AutoCompleteTextView
                android:id="@+id/service_detail_mechanic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/mechanic"
                tools:text="mechanic" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:touchscreenBlocksFocus="false">

            <AutoCompleteTextView
                android:id="@+id/service_detail_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/vehicle"
                tools:text="mechanic" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:touchscreenBlocksFocus="false">

            <AutoCompleteTextView
                android:id="@+id/service_detail_dateOfService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/serviceDate"
                tools:text="01.01.2017." />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:touchscreenBlocksFocus="false">

            <EditText
                android:id="@+id/service_detail_dateOfNextService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/serviceDateOfNextService"
                tools:text="01.01.2017." />
        </android.support.design.widget.TextInputLayout>


        <CheckBox
            android:id="@+id/service_detail_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/serviceBigService" />

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:touchscreenBlocksFocus="false">

            <AutoCompleteTextView
                android:id="@+id/service_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="true"
                android:hint="@string/malfunctionDescription"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis enim luctus, mollis lectus et, malesuada lectus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus." />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:touchscreenBlocksFocus="false">

            <AutoCompleteTextView
                android:id="@+id/service_detail_priceOfParts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:inputType="numberDecimal"
                android:cursorVisible="true"
                android:hint="@string/priceOfParts"
                tools:text="300" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:touchscreenBlocksFocus="false">

            <AutoCompleteTextView
                android:id="@+id/service_detail_priceOfWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:inputType="numberDecimal"
                android:cursorVisible="true"
                android:hint="@string/priceOfWork"
                tools:text="1200" />
        </android.support.design.widget.TextInputLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <Button
                android:id="@+id/service_detail_buttonCancel"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cancel"/>
            <Button
                android:id="@+id/service_detail_buttonSave"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/save"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>